BOOKKEEPER-388: Document bookie format command (kiran_bc via ivank) [Corrected CHANGES.txt]
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1388558 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -144,7 +144,7 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-325: Delay the replication of a ledger if RW found that its last fragment is in underReplication. (umamahesh via ivank)
 
-        BOOKKEEPER-388: Document bookie format command (vinayrpet via ivank)
+        BOOKKEEPER-388: Document bookie format command (kiran_bc via ivank)
 
       hedwig-server:
 
