--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -174,6 +174,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-335: client-side message filter for cpp client. (sijie via ivank)
 
+        BOOKKEEPER-364: re-factor hedwig java client to support both one-subscription-per-channel and multiplex-subscriptions-per-channel. (sijie via ivank)
+
 Release 4.1.0 - 2012-06-07
 
   Non-backward compatible changes:
