BOOKKEEPER-367: Server-Side Message Delivery Flow Control (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1394066 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -168,6 +168,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-397: Make the hedwig client in RegionManager configurable. (Aniruddha via sijie)
 
+        BOOKKEEPER-367: Server-Side Message Delivery Flow Control (sijie via ivank)
+
       hedwig-client:
 
         BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)
