--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -174,6 +174,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-367: Server-Side Message Delivery Flow Control (sijie via ivank)
 
+        BOOKKEEPER-415: Rename DeliveryThrottle to MessageWindowSize (ivank via sijie)
+
       hedwig-client:
 
         BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)
