BOOKKEEPER-418: Store hostname of locker in replication lock (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1396536 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -90,6 +90,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-405: Let's add Thread name for ReplicationWorker thread. (umamahesh via ivank)
 
+        BOOKKEEPER-418: Store hostname of locker in replication lock (ivank)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
