BOOKKEEPER-422: Simplify AbstractSubscriptionManager (stu via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1399159 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -182,6 +182,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-415: Rename DeliveryThrottle to MessageWindowSize (ivank via sijie)
 
+	BOOKKEEPER-422: Simplify AbstractSubscriptionManager (stu via fpj)
+
       hedwig-client:
 
         BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)
