BOOKKEEPER-554: fd leaking when move ledger index file (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1445763 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+Release 4.2.1 (unreleased changes)
+
+  Backward compatible changes:
+
+    BUGFIXES:
+
+      BOOKKEEPER-554: fd leaking when move ledger index file (sijie via ivank)
+
 Release 4.2.0 - 2013-01-14
 
   Non-backward compatible changes:
