BOOKKEEPER-568: NPE during GC with HierarchicalLedgerManager (Matteo via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1446445 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Release 4.2.1 (unreleased changes)
 
       BOOKKEEPER-554: fd leaking when move ledger index file (sijie via ivank)
 
+      BOOKKEEPER-568: NPE during GC with HierarchicalLedgerManager (Matteo via sijie)
+
 Release 4.2.0 - 2013-01-14
 
   Non-backward compatible changes:
