--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,9 +4,13 @@ Release 4.2.1 (unreleased changes)
 
     BUGFIXES:
 
-      BOOKKEEPER-554: fd leaking when move ledger index file (sijie via ivank)
+      bookkeeper-server:
 
-      BOOKKEEPER-568: NPE during GC with HierarchicalLedgerManager (Matteo via sijie)
+        BOOKKEEPER-554: fd leaking when move ledger index file (sijie via ivank)
+
+        BOOKKEEPER-568: NPE during GC with HierarchicalLedgerManager (Matteo via sijie)
+
+        BOOKKEEPER-569: Critical performance bug in InterleavedLedgerStorage (ivank via fpj)
 
 Release 4.2.0 - 2013-01-14
 
