--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Release 4.2.1 (unreleased changes)
 
       bookkeeper-server:
 
+        BOOKKEEPER-567: ReadOnlyBookieTest hangs on shutdown (sijie via ivank)
+
         BOOKKEEPER-549: Documentation missed for readOnlyMode support (ivank)
 
         BOOKKEEPER-548: Document about periodic ledger checker configuration (ivank)
