BOOKKEEPER-583: Read from a ReadOnlyBookie fails if index fileinfo is not in ledger cache (vinay via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1460527 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -18,6 +18,12 @@ Release 4.2.1 - 2013-02-19
 
         BOOKKEEPER-569: Critical performance bug in InterleavedLedgerStorage (ivank via fpj)
 
+    IMPROVEMENTS:
+
+      bookkeeper-server:
+
+        BOOKKEEPER-583: Read from a ReadOnlyBookie fails if index fileinfo is not in ledger cache (vinay via sijie)
+
 Release 4.2.0 - 2013-01-14
 
   Non-backward compatible changes:
