BOOKKEEPER-564: Better checkpoint mechanism (sijie & ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1479085 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Trunk (unreleased changes)
 
     BUGFIXES:
 
+      BOOKKEEPER-564: Better checkpoint mechanism (sijie & ivank)
+
       BOOKKEEPER-596: Ledgers are gc'ed by mistake in MSLedgerManagerFactory. (sijie & ivank)
 
       BOOKKEEPER-595: Crash of inprocess autorecovery daemon should not take down the bookie (ivank)
