BOOKkEEPER-577: BookieFailureTest uses sync/wait()/notify() incorrectly (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1480051 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-599: NPE in PerChannelBookieClient (jiannan via sijie)
 
+	BOOKkEEPER-577: BookieFailureTest uses sync/wait()/notify() incorrectly (ivank via fpj) 
+
       hedwig-client:
 
         BOOKKEEPER-598: Fails to compile - RESUBSCRIBE_EXCEPTION conflict (Matthew Farrellee via sijie)
