BOOKKEEPER-608: Make SyncThread a reusable component (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1480580 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -56,6 +56,8 @@ Trunk (unreleased changes)
 
     IMPROVEMENTS:
 
+      BOOKKEEPER-608: Make SyncThread a reusable component (ivank)
+
       BOOKKEEPER-555: Make BookieServer use Netty rather than a custom IO server (ivank)
 
       BOOKKEEPER-526: multiple threads for delivery manager (sijie via ivank)
