BOOKKEEPER-257: Ability to list all ledgers (fpj via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1480978 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -84,6 +84,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
 
+      BOOKKEEPER-257: Ability to list all ledgers (fpj via ivank)
+
 Release 4.2.0 - 2013-01-14
 
   Non-backward compatible changes:
