BOOKKEEPER-559: Fix occasional failure in AuditorBookieTest (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1490544 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,9 +6,11 @@ Release 4.2.2 - Unreleased
 
       bookkeeper-server:
 
-       BOOKKEEPER-556: BookieServerMXBean#getServerState makes no sense (ivank)
+        BOOKKEEPER-559: Fix occasional failure in AuditorBookieTest (ivank)
 
-       BOOKKEEPER-583: Read from a ReadOnlyBookie fails if index fileinfo is not in ledger cache (vinay via sijie)
+        BOOKKEEPER-556: BookieServerMXBean#getServerState makes no sense (ivank)
+
+        BOOKKEEPER-583: Read from a ReadOnlyBookie fails if index fileinfo is not in ledger cache (vinay via sijie)
 
 Release 4.2.1 - 2013-02-19
 
