BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1490548 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,10 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-583: Read from a ReadOnlyBookie fails if index fileinfo is not in ledger cache (vinay via sijie)
 
+      hedwig-server:
+
+        BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
+
 Release 4.2.1 - 2013-02-19
 
   Backward compatible changes:
