--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -18,6 +18,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-595: Crash of inprocess autorecovery daemon should not take down the bookie (ivank)
 
+        BOOKKEEPER-596: Ledgers are gc'ed by mistake in MSLedgerManagerFactory. (sijie via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
