--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,10 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
 
+      hedwig-client:
+
+        BOOKKEEPER-598: Fails to compile - RESUBSCRIBE_EXCEPTION conflict (Matthew Farrellee via ivank)
+
 Release 4.2.1 - 2013-02-19
 
   Backward compatible changes:
