--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,6 +28,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-598: Fails to compile - RESUBSCRIBE_EXCEPTION conflict (Matthew Farrellee via ivank)
 
+        BOOKKEEPER-603: Support Boost 1.53 for Hedwig Cpp Client (jiannan via ivank)
+
 Release 4.2.1 - 2013-02-19
 
   Backward compatible changes:
