--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -34,6 +34,11 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-603: Support Boost 1.53 for Hedwig Cpp Client (jiannan via ivank)
 
+    NEW FEATURE:
+
+      BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj via ivank)
+
+
 Release 4.2.1 - 2013-02-19
 
   Backward compatible changes:
