BOOKKEEPER-626: BOOKIE_EXTRA_OPTS are added twice (vinay via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1493373 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,8 @@ Trunk (unreleased changes)
         BOOKKEEPER-599: NPE in PerChannelBookieClient (jiannan via sijie)
 
 	BOOKKEEPER-577: BookieFailureTest uses sync/wait()/notify() incorrectly (ivank via fpj) 
+	
+	BOOKKEEPER-626: BOOKIE_EXTRA_OPTS are added twice (vinay via fpj)
 
       hedwig-client:
 
