BOOKKEEPER-626: BOOKIE_EXTRA_OPTS are added twice (vinay via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1493375 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-577: BookieFailureTest uses sync/wait()/notify() incorrectly (ivank)
 
+	BOOKKEEPER-626: BOOKIE_EXTRA_OPTS are added twice (vinay via fpj)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
