BOOKKEEPER-627: LedgerDirsMonitor is missing thread name (rakesh via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1493377 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -90,6 +90,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-592: allow application to recommend ledger data locality (sijie via ivank)
 
+      BOOKKEEPER-627: LedgerDirsMonitor is missing thread name (rakesh via fpj)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
