BOOKKEEPER-618: Better resolution of bookie address (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1493400 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -92,6 +92,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-627: LedgerDirsMonitor is missing thread name (rakesh via fpj)
 
+      BOOKKEEPER-618: Better resolution of bookie address (ivank via fpj)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
