--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-623: LedgerChecker should avoid segments of closed ledger with higher start entryId than closed entry. (vinay via sijie)
 
+        BOOKKEEPER-620: PerChannelBookieClient race during channel disconnect (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
