--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -38,6 +38,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-257: Ability to list all ledgers (fpj via ivank)
 
+        BOOKKEEPER-636: Latest txn logs might be deleted in a race condition which is not recoverable if BK goes down before next txn log created. (vinay via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
