BOOKKEEPER-618: Better resolution of bookie address (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1502728 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,9 @@ Release 4.2.2 - Unreleased
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj via ivank)
 
+	
+    IMPROVEMENT:
+      BOOKKEEPER-618: Better resolution of bookie address (ivank via fpj)
 
 Release 4.2.1 - 2013-02-19
 
