--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -44,6 +44,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
 
+	BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
+
       hedwig-client:
 
         BOOKKEEPER-598: Fails to compile - RESUBSCRIBE_EXCEPTION conflict (Matthew Farrellee via ivank)
