--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,8 @@ Release 4.2.2 - Unreleased
 
         BOOKKEEPER-652: Logger class name is wrong in LedgerCacheImpl.java (Rakesh via sijie)
 
+        BOOKKEEPER-625: On OutOfMemoryError in NIOServerFactory thread bookie should shutdown (vinay via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-579: TestSubAfterCloseSub was put in a wrong package (sijie via ivank)
